[package]
name = "papaleguas"
version = "0.0.2"
edition = "2021"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
license = "MIT"
description = "ACME client"
repository = "https://github.com/reu/papaleguas"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["acme", "tls", "letsencrypt"]

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
ecdsa = { version = "0.14.8", features = ["sign", "verify", "pem", "der"] }
elliptic-curve = { version = "0.12.3", features = ["jwk", "serde", "pem"] }
futures = "0.3.21"
http = "0.2.7"
openssl = "0.10.38"
p256 = { version = "0.11.1", features = ["jwk"] }
pkcs8 = "0.9.0"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json"] }
rsa = "0.7.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.6"
signature = "1.6.4"
thiserror = "1.0.31"
tokio = { version = "1.17.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["fs", "macros", "test-util"] }
