[package]
name = "papaleguas"
version = "0.0.9"
edition = "2021"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
license = "MIT"
description = "ACME client"
repository = "https://github.com/reu/papaleguas"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["acme", "tls", "letsencrypt"]

[profile.dev]
opt-level = 3

[dependencies]
base64ct = "1.5.3"
bytes = "1.1.0"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "pem", "der"] }
elliptic-curve = { version = "0.13.8", features = ["jwk", "serde", "pem"] }
futures = "0.3.21"
http = "1.2"
p256 = { version = "0.13.2", features = ["jwk"] }
p384 = { version = "0.13.1", features = ["jwk"], optional = true }
pkcs8 = { version = "0.10.2", features = ["std"] }
rand = "0.8.5"
rcgen = "0.10.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9.7", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = { version = "0.10.6", features = ["oid"] }
signature = { version = "2.2.0", features = ["alloc"] }
thiserror = "1.0.31"
time = { version = "0.3.35", features = ["parsing", "serde"] }
tokio = { version = "1.17.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["fs", "macros", "test-util"] }
